--- a/CrashCourse/server_express/views/partials/head.ejs
+++ b/CrashCourse/server_express/views/partials/head.ejs
@@ -1,6 +1,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
+    <title>Bryans Blog |</title>
     <link rel="stylesheet" href="../../public/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
